# termpix

./: .gitignore  CHANGELOG.md  LICENSE  PKGBUILD  PKGBUILD.old  README.md  plan.md  pyproject.toml  setup.py
.github/workflows/: release.yml
src/: __main__.py  setup.py  termpix.py  termpixtool.py
src/termpix/: __init__.py  __main__.py  termpix.py
src/termpix/termpixtool/: __init__.py  termpixtool.py
src/termpixtool/: termpixtool.py
tpix/: adventureTime.tpix  bender.tpix  bigcow.tpix  bigdaddy.tpix  blobFish.tpix  catTest.tpix  cuteCat1.tpix  freeman1.tpix  freeman2.tpix  gladosPotat.tpix  guyFawkes.tpix  larry.tpix  peterGab1.tpix  pinkman.tpix  pleadEmoji.tpix  pooh.tpix  reddit.tpix  smile.tpix  tf2-medic.tpix  tf2-pyro.tpix  tf2-sniper.tpix  tf2-spy.tpix  thom1.tpix  tux.tpix  vault-boy.tpix  wheatley.tpix  yoda.tpix
