[build-system]
requires = ['hatchling >= 1.26']
build-backend = 'hatchling.build'

[project]
name = 'termpix'
version = '0.0.1'
authors = [
    { name = 'casperrr', email = 'casper.sebastien@gmail.com' },
]
description = 'Convert and display images as pixel art in the terminal'
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pillow >= 9.0.0",
    "validators",
    "requests"
]

[project.scripts]
termpix = 'termpix.__main__:main'

[tool.hatch.build.targets.wheel]
packages = ["src/termpix"]

# This installs tpix folder to /usr/share/termpix/tpix
[tool.hatch.build.targets.wheel.shared-data]
"tpix" = "share/termpix/tpix"