[build-system]
requires = ['hatchling >= 1.26']
build-backend = 'hatchling.build'

[project]
name = 'termpix'
version = '0.0.1'
authors = [
    { name = 'casperrr', email = 'casper.sebastien@gmail.com' },
]
description = 'Convert and display images as pixel art in the terminal'
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "GNU"
license-files = ["LICENSE"]
dependencies = [
    "pillow >= 9.0.0",
    "validators",
    "requests"
]

[project.scripts]
termpix = 'termpix.__main__:main'

[tool.hatch.build.targets.wheel]
packages = ["src/termpix"]

# This installs tpix folder to /usr/share/termpix/tpix
[tool.hatch.build.targets.wheel.shared-data]
"tpix" = "share/termpix/tpix"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m build"
dist_path = "dist/"
upload_to_pypi = false
upload_to_release = true
hvcs = "github"
commit_message = "chore(release): {version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_types = [
    "build",
    "chore", 
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_types = ["feat"]
patch_types = ["fix", "perf"]